primary color change

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@
   --card-foreground: oklch(0.99 0 0);
   --popover: oklch(0.27 0 0);
   --popover-foreground: oklch(0.99 0 0);
-  --primary: oklch(0.79 0.17 69.12);
+  --primary: oklch(78.936% 0.16981 69.177);
   --primary-foreground: oklch(0 0 0);
   --secondary: oklch(0.27 0 0);
   --secondary-foreground: oklch(0.99 0 0);
